# oh-my-coach

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test
backend/: brain.py  config.py  main.py  model_agents.py  models.py
backend/brain/: __init__.py  agent_pipeline.py  brain.py  goal_creator.py  intent_classifier.py  subagents.py  task_creator.py  triage.py
backend/routes/: chat.py  health_check.py  idk.py  maintenance.py  personalisation.py  realtime.py  staticFiles.py  tasks.py  users.py
db/: Dockerfile
docs/: agents-pipeline.md
examples/: README.md  fastapi_example.py  logging_example.py  openai_agent_example.py  openai_example.py  plotting_example.py  sts_example.py  tts_example.py  tts_example2.py
frontend/: index.html
frontend/public/: Chat.html
frontend/templates/: base.html
public/: apiConnector.js  chat.html  chat.js  goals.html  goals.js  leftbar.js  progress.html  retro.html  style-chat.css  style-progress.css  style-retro.css  style.css  utils.js  vtv.js
vtv-node-service/: package-lock.json  package.json  server.js
